src/test/ui/parser/removed-syntax-uniq-mut-ty.rs
type mut_box = Box<mut isize>; //~ ERROR expected one of `>`, const, lifetime, or type, found `mut`
